# foray

./: .gitignore  .mcp.json  .python-version  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SETUP.md  build.rs  opencode.json  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: blueprint.mdc
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-skill.yml  release.yml
doc/: blueprint.md  compatibility.md  es-index-template.json  plan.md  schema-protocol.md  sequences.md
openspec/: config.yaml
openspec/specs/cli/: spec.md
openspec/specs/data-model/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/stdio-store/: spec.md
openspec/specs/storage/: spec.md
openspec/specs/testing/: spec.md
skills/foray/: SKILL.md
skills/hunch/: SKILL.md
src/: cli.rs  config.rs  git.rs  lib.rs  main.rs  migrate.rs  paths.rs  server.rs  store.rs  store_elasticsearch.rs  store_json.rs  store_stdio.rs  tree.rs  types.rs
tests/: delete_confirm_test.rs  docker-compose-es.yml  elasticsearch_store_test.rs  list_completion_test.rs  stdio_store_test.rs
tests/eval/: README.md  checker.py  run-eval.py
tests/eval/scenarios/: archived-read.toml  cross-reference.toml  empty-journal.toml  pagination-high-variance.toml  pagination-realistic.toml  pagination-uniform.toml  schema-migration.toml  single-item.toml
tests/fixtures/journals/: correction-trail.json  cross-reference.json  schema-v0.json  stats-empty.json  stats-high-variance.json  stats-realistic.json  stats-single.json  stats-uniform.json
tests/fixtures/journals/archive/: stats-high-variance-archived.json
