[package]
name = "foray"
version = "0.3.0-dev"
edition = "2024"
description = "Persistent, forkable investigation journals via MCP"
license = "Apache-2.0"
repository = "https://github.com/cavokz/foray"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
fs2 = "0.4"
rand = "0.9"
rmcp = { version = "1.4", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
