[package]
name = "foray"
version = "0.3.0-dev"
edition = "2024"
description = "Persistent journals for AI agents — shareable across machines and teams"
license = "Apache-2.0"
repository = "https://github.com/cavokz/foray"
keywords = ["mcp", "journal", "ai-agents", "llm", "context"]
categories = ["artificial-intelligence", "command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fs2 = "0.4"
home = "0.5.12"
rand = "0.9"
rmcp = { version = "1.4", features = ["server", "client", "macros", "transport-io", "transport-child-process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "io-util"] }
toml = "0.8"

[features]
dynamic-completion = ["clap_complete/unstable-dynamic"]

[dev-dependencies]
tempfile = "3"
